<resources>
    <string name="app_name">GRWA</string>
    <string name="title_activity">GRWA</string>

    <!--============ Navigation bar ==========-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--============ Login ==========-->
    <string name="forgot_password"><u>Forgot password?</u></string>
    <string name="enter_username">Enter Username</string>
    <string name="login">Login</string>
    <string name="enter_password">Enter password</string>

    <!--============ Property Details ==========-->
    <string name="RS">₹</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_phone">Enter Mobile</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_message">Enter Message</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_notification">NotificationActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="reload"><u>Reload page</u></string>
    <string name="title_activity_profile">ProfileActivity</string>

</resources>
